Added Details.cshtml Updated controller & cotext

--- a/myBucketListPlaces/Views/Places/Index.cshtml
+++ b/myBucketListPlaces/Views/Places/Index.cshtml
@@ -1,15 +1,10 @@
-﻿@using myBucketListPlaces.Models
-@model IEnumerable<PlacesIndexVM>
+﻿@model IEnumerable<PlacesIndexVM>
 
-<!DOCTYPE html>
-<html>
-<head>
-    <title> </title>
-</head>
-<body>
-    @foreach (var item in Model)
-    {
-        <p>@item.Name, @item.Country</p>
-    }
-</body>
-</html>
+@{
+    ViewBag.Title = "Index page";
+}
+
+@foreach (var item in Model)
+{
+    <p>@item.Name, @item.Country</p>
+}
