--- a/myBucketListPlaces/Views/Places/Details.cshtml
+++ b/myBucketListPlaces/Views/Places/Details.cshtml
@@ -2,9 +2,17 @@
 
 @{
     ViewBag.Title = "Details page";
+
 }
+
+@{string lat = @Model.Lat.ToString();
+    string lon = @Model.Long.ToString();
+    lat = lat.Replace(',', '.');
+    lon = lon.Replace(',', '.');}
 
 <h1>@Model.Name, @Model.Country</h1>
 <p>@Model.Description</p>
 <p>@Model.Lat - @Model.Long</p>
 
+<iframe width="300" height="300" frameborder="0" style="border:0"
+        src="https://www.google.com/maps/embed/v1/view?key=AIzaSyACHQ9vOokyq473Ps9B834tciBt6injSM4&center=@lat,@lon&zoom=14"></iframe>
